--- a/template/board_template1.tmpl
+++ b/template/board_template1.tmpl
@@ -100,7 +100,7 @@ LINK
 			Template for the category title
 		-->
 			<tr bgcolor="###GC4###">
-				<td colspan="5"><b>###GW2B###<font color="#FFFFFF"><!--###LINK###-->###CATEGORY_TITLE###<!--###LINK###--></FONT>###GW2E###</b></td>
+				<td colspan="5"><b>###GW2B###<font color="#FFFFFF"><!-- ###LINK### begin -->###CATEGORY_TITLE###<!-- ###LINK### end --></font>###GW2E###</b></td>
 			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
@@ -108,10 +108,10 @@ LINK
 		-->
 			<tr>
 				<td bgcolor="###GC2###" align="center" valign="top"><img src="clear.gif" width=20 height=1 border="0"></td>
-				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></b>###GW1E###<br />###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
+				<td bgcolor="###GC2###" valign="top">###GW1B### <b><!-- ###LINK### begin -->###FORUM_TITLE###<!-- ###LINK### end --></b>###GW1E###<br />###GW2B### ###FORUM_DESCRIPTION### ###GW2E###</td>
 				<td bgcolor="###GC1###" align="center" valign="top">###GW1B### ###FORUM_POSTS### ###GW1E###</td>
 				<td bgcolor="###GC2###" align="center" valign="top">###GW1B### ###FORUM_THREADS### ###GW1E###</td>
-				<td bgcolor="###GC1###" valign="top" align="center">###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###!<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME###<br />###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
+				<td bgcolor="###GC1###" valign="top" align="center">###GW2B### <!-- ###LINK_LAST_POST### begin -->###BOARD_LAST_POST###!<!-- ###LINK_LAST_POST### end --> ###LAST_POST_DATE### ###LAST_POST_TIME###<br />###LAST_POST_AUTHOR### - ###LAST_POST_AGE### ###GW2E###</td>
 			</tr>
 		<!-- ###FORUM### end-->
 		<!-- ###POST### begin
@@ -119,7 +119,7 @@ LINK
 		-->
 			<tr>
 				<td align="center" valign="top">NEW!</td>
-				<td valign="top"><!--###LINK###-->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!--###LINK###--><br />###GW2B### ###POST_CONTENT### ###GW2E###</td>
+				<td valign="top"><!-- ###LINK### begin -->###GW1B### <b>###POST_TITLE###</b>###GW1E###<!-- ###LINK### end --><br />###GW2B### ###POST_CONTENT### ###GW2E###</td>
 				<td align="center" valign="top">###GW1B### ###POST_REPLIES### ###GW1E###</td>
 				<td align="center" valign="top">###GW1B### &nbsp; ###GW1E###</td>
 				<td valign="top" align="center">###GW2B### ###POST_DATE###  ###POST_TIME###<br />###POST_AUTHOR### ###GW2E###</td>
@@ -170,31 +170,34 @@ LINK_LAST_POST
 <!-- ###TEMPLATE_FORUM### begin
 	Template for listing of items in a single forum.
 -->
-<form action="###FORM_URL###" method="POST" name="tt-board-search">
 <table border="0" cellpadding="4" border="0" cellspacing="1" width="100%" class="tx-ttboard-table-forum">
+    <tr><td><!-- ###LINK_PREV### begin --><!-- ###LINK_PREV### end --></td><td colspan="8"><!-- ###LINK_BROWSE### begin -->[ ###BROWSE_LINKS### ]<!-- ###LINK_BROWSE### end--></td><td></td></tr>
 	<tr bgcolor="###GC3###">
-		<td colspan="2">###GW3B### <b>###FORUM_TITLE###</b> ###GW3E###</td>
+        <td><!-- ###LINK_NEXT### begin --><!-- ###LINK_NEXT### end --></td>
+		<td colspan="4">###GW3B### <b>###FORUM_TITLE###</b> ###GW3E###</td>
 		<td align="center">###GW3B### <b>###BOARD_THREAD_STARTER###</b> ###GW3E###</td>
 		<td align="center">###GW3B### <b>###BOARD_REPLIES###</b> ###GW3E###</td>
-		<td colspan="2" align="center">###GW3B### <b>###BOARD_LAST_POST###</b> ###GW3E###</td>
+		<td colspan="3" align="center">###GW3B### <b>###BOARD_LAST_POST###</b> ###GW3E###</td>
 	</tr>
 	<!-- ###CONTENT### begin -->
 		<!--###POST### begin -->
 			<tr>
 				<td align="center" bgcolor="###GC2###" width="20"><img src="###PATH###res/icons/fe/thread.gif"></td>
-				<td bgcolor="###GC2###">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br />###GW1E###</td>
+				<td colspan="4" bgcolor="###GC2###">###GW1B### <!--###LINK###-->###POST_TITLE###<!--###LINK###--><br />###GW1E###</td>
 				<td align="center" bgcolor="###GC1###">###GW1B### ###POST_AUTHOR### ###GW1E###</td>
 				<td align="center" bgcolor="###GC2###">###GW1B### ###POST_REPLIES### ###GW1E###</td>
-				<td colspan="2" align="center" bgcolor="###GC2###" >###GW2B### <!--###LINK_LAST_POST###-->###BOARD_LAST_POST###<!--###LINK_LAST_POST###--> ###LAST_POST_DATE### ###LAST_POST_TIME### ###BOARD_BY### ###LAST_POST_AUTHOR### - ###BOARD_AGE###: ###LAST_POST_AGE### ###GW2E###</td>
+				<td colspan="3" align="center" bgcolor="###GC2###" >###GW2B### <!-- ###LINK_LAST_POST### begin -->###BOARD_LAST_POST###<!-- ###LINK_LAST_POST### end --> ###LAST_POST_DATE### ###LAST_POST_TIME### ###BOARD_BY### ###LAST_POST_AUTHOR### - ###BOARD_AGE###: ###LAST_POST_AGE### ###GW2E###</td>
 			</tr>
 		<!--###POST### end -->
 	<!-- ###CONTENT###  end -->
 	<tr bgcolor="###GC1###">
-  	<td colspan=6>###GW1B###<b>Suchen: </b>###GW1E###<input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
-		</td>
+  	<td colspan="10">
+    <form action="###FORM_URL###" method="POST" name="tt-board-search">
+  	###GW1B###<b>Suchen: </b>###GW1E###<input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="Search in the board">
+  	</form>
+    </td>
 	</tr>
 </table>
-</form>
 <!-- ###TEMPLATE_FORUM### end -->
 
 
