--- a/template/board_template2.tmpl
+++ b/template/board_template2.tmpl
@@ -47,14 +47,14 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 			Template for the display of latest posts of a forum
 		-->
 	<tr bgcolor="###GC1###">
-		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></td>
+		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!-- ###LINK### begin -->###GW1B### ###POST_TITLE### ###GW1E###<!-- ###LINK### end --></td>
 	</tr>
 		<!-- ###POST### end -->
 		<!-- ###POST_1### begin
 			See POST marker, this is the alternative layout used every second time.
 		-->
 	<tr bgcolor="###GC2###">
-		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!--###LINK###-->###GW1B### ###POST_TITLE### ###GW1E###<!--###LINK###--></td>
+		<td><img src="typo3/sysext/cms/tslib/media/scripts/new.gif" height="10" width="35"><!-- ###LINK### begin -->###GW1B### ###POST_TITLE### ###GW1E###<!-- ###LINK### end --></td>
 	</tr>
 		<!-- ###POST_1### end -->
 	<tr>
@@ -89,21 +89,21 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 		<!--###POST### begin -->
 			<tr class="tx-ttboard-tree-rows">
 				<td bgcolor="###GC1###">
-###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+###POST_THREAD_CODE###<!-- ###LINK### begin -->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!-- ###LINK### end --></td>
 				<td bgcolor="###GC1###">###GW2B### ###POST_AUTHOR### ###GW2E###</td>
 				<td bgcolor="###GC1###">###GW2B### ###POST_DATE### - ###POST_AGE### ###GW2E###</td>
 			</tr>
 		<!--###POST### end -->
 		<!--###POST_1### begin -->
 			<tr class="tx-ttboard-tree-rows">
-				<td bgcolor="###GC2###">###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+				<td bgcolor="###GC2###">###POST_THREAD_CODE###<!-- ###LINK### begin -->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!-- ###LINK### end --></td>
 				<td bgcolor="###GC2###" >###GW2B### ###POST_AUTHOR### ###GW2E###</td>
 				<td bgcolor="###GC2###" >###GW2B### ###POST_DATE### - ###POST_AGE### ###GW2E###</td>
 			</tr>
 		<!--###POST_1### end -->
 		<!--###POST_ACTIVE### begin -->
 			<tr >
-				<td>###POST_THREAD_CODE###<!--###LINK###-->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!--###LINK###--></td>
+				<td>###POST_THREAD_CODE###<!-- ###LINK### begin -->###GW1B###<b>###POST_TITLE###</b>###GW1E###<!-- ###LINK### end --></td>
 				<td>###GW2B### ###POST_AUTHOR### ###GW2E###</td>
 				<td>###GW2B### ###POST_DATE### - ###POST_AGE### ###GW2E###</td>
 			</tr>
@@ -113,7 +113,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 
 <form action="###FORM_URL###" method="POST" name="tt-board-search">
 	<tr>
-		<td class="tx-ttboard-search-forum" colspan=3><b>###BOARD_SEARCH###: </b><input type="text" name="tt_board_sword" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="###BUTTON_SEARCH###">
+		<td class="tx-ttboard-search-forum" colspan=3><b>###BOARD_SEARCH###: </b><input type="text" name="###SEARCH_NAME###" value="###SEARCH_WORD###">	<input type="submit" id="boardSearchSubmitId" value="###BUTTON_SEARCH###">
 		</td>
 	</tr>
 </form>
@@ -144,11 +144,11 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
         <tr><td>&nbsp;</td></tr>
         <tr>
 					<td class="tx-ttboard-link-back-to-forum" width="40%" align="left" >
-						###GW2B### <b><!--###LINK_BACK_TO_FORUM###-->###BOARD_FORUM_LIST###<!--###LINK_BACK_TO_FORUM###-->&nbsp;&nbsp;|&nbsp;&nbsp;<!--###LINK_FIRST_POST###-->###BOARD_GO_TO_TOP###<!--###LINK_FIRST_POST###-->&nbsp;&nbsp;&nbsp;</b>###GW2E###
+						###GW2B### <b><!-- ###LINK_BACK_TO_FORUM### begin -->###BOARD_FORUM_LIST###<!-- ###LINK_BACK_TO_FORUM### end -->&nbsp;&nbsp;|&nbsp;&nbsp;<!-- ###LINK_FIRST_POST### begin -->###BOARD_GO_TO_TOP###<!-- ###LINK_FIRST_POST### end -->&nbsp;&nbsp;&nbsp;</b>###GW2E###
 					</td>
 					<td class="tx-ttboard-link-to-forum-message" width="40%" align="right" >###GW2B### <b>
-						<!--###LINK_PREV_POST###-->###BOARD_PREVIOUS_MESSAGE###<!--###LINK_PREV_POST###-->&nbsp;&nbsp;|
-						&nbsp;<!--###LINK_NEXT_POST###-->###BOARD_NEXT_MESSAGE###<!--###LINK_NEXT_POST###--></b>###GW2E### &nbsp;
+						<!-- ###LINK_PREV_POST### begin -->###BOARD_PREVIOUS_MESSAGE###<!-- ###LINK_PREV_POST### end -->&nbsp;&nbsp;|
+						&nbsp;<!-- ###LINK_NEXT_POST### begin -->###BOARD_NEXT_MESSAGE###<!-- ###LINK_NEXT_POST### end --></b>###GW2E### &nbsp;
 					</td>
      		</tr>
          <tr><td>&nbsp;</td></tr>
@@ -185,7 +185,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 				<tr>
 					<td width="50%">
 					</td>
-					<td class="tx-ttboard-link-to-forum-message" width="50%" align="right" >###GW2B### <b><!--###LINK_PREV_THREAD###-->###BOARD_PREVIOUS_TOPIC###<!--###LINK_PREV_THREAD###-->&nbsp;&nbsp;|&nbsp;&nbsp;<!--###LINK_NEXT_THREAD###-->###BOARD_NEXT_TOPIC###<!--###LINK_NEXT_THREAD###--></b>###GW2E###&nbsp;&nbsp; </td>
+					<td class="tx-ttboard-link-to-forum-message" width="50%" align="right" >###GW2B### <b><!-- ###LINK_PREV_THREAD### begin -->###BOARD_PREVIOUS_TOPIC###<!-- ###LINK_PREV_THREAD### end -->&nbsp;&nbsp;|&nbsp;&nbsp;<!-- ###LINK_NEXT_THREAD### begin -->###BOARD_NEXT_TOPIC###<!-- ###LINK_NEXT_THREAD### end --></b>###GW2E###&nbsp;&nbsp; </td>
 				</tr>
 			</table>
 		<!--###POST### end -->
