--- a/template/board_template3.tmpl
+++ b/template/board_template3.tmpl
@@ -51,7 +51,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 			Template for the category title
 		-->
 			<tr bgcolor="#05437E">
-				<td colspan="5"><!--###LINK###--><b><font face="arial, helvetica" size="2" color="#FFFFFF">###CATEGORY_TITLE###</font></b><!--###LINK###--><br><font face="arial, helvetica" size="1" color="#FFFFFF">###CATEGORY_DESCRIPTION###</font></td>
+				<td colspan="5"><!-- ###LINK### begin --><b><font face="arial, helvetica" size="2" color="#FFFFFF">###CATEGORY_TITLE###</font></b><!-- ###LINK### end --><br><font face="arial, helvetica" size="1" color="#FFFFFF">###CATEGORY_DESCRIPTION###</font></td>
 			</tr>
 		<!-- ###CATEGORY###  end -->
 		<!-- ###FORUM### begin
@@ -59,10 +59,10 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 		-->
 			<tr>
 				<td bgcolor="#CECAC3" align="center" valign="top"><IMG src="clear.gif" width=20 height=1 border="0"></td>
-				<td bgcolor="#CECAC3" valign="top"><font face="arial, helvetica" size="2"><b><!--###LINK###-->###FORUM_TITLE###<!--###LINK###--></b></font><br><font face="verdana,arial,helvetica" size="1">###FORUM_DESCRIPTION###</font></td>
+				<td bgcolor="#CECAC3" valign="top"><font face="arial, helvetica" size="2"><b><!-- ###LINK### begin -->###FORUM_TITLE###<!-- ###LINK### end --></b></font><br><font face="verdana,arial,helvetica" size="1">###FORUM_DESCRIPTION###</font></td>
 				<td bgcolor="#CECAC3" align="center" valign="top" nowrap><font face="arial, helvetica" size="2">###FORUM_POSTS###</font></td>
 				<td bgcolor="#CECAC3" align="center" valign="top" nowrap><font face="arial, helvetica" size="2">###FORUM_THREADS###</font></td>
-				<td bgcolor="#CECAC3" valign="top" align="center"><!--###LINK_LAST_POST###--><font face="verdana,arial, helvetica" size="1" color="black">###LAST_POST_DATE### ###LAST_POST_TIME###<br>###LAST_POST_AUTHOR###</font><!--###LINK_LAST_POST###--></td>
+				<td bgcolor="#CECAC3" valign="top" align="center"><!-- ###LINK_LAST_POST### begin --><font face="verdana,arial, helvetica" size="1" color="black">###LAST_POST_DATE### ###LAST_POST_TIME###<br>###LAST_POST_AUTHOR###</font><!-- ###LINK_LAST_POST### end --></td>
 			</tr>
 		<!-- ###FORUM### end-->
 		<!-- ###POST### begin
@@ -70,7 +70,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 		-->
 			<tr>
 				<td bgcolor="#E7E3DB" align="center" valign="top"></td>
-				<td bgcolor="#E7E3DB" valign="top"><!--###LINK###--><font face="verdana,arial, helvetica" size="1" color="black"><b>###POST_TITLE###</b></font><!--###LINK###--><br><font face="verdana,arial,helvetica" size="1">###POST_CONTENT###</font></td>
+				<td bgcolor="#E7E3DB" valign="top"><!-- ###LINK### begin --><font face="verdana,arial, helvetica" size="1" color="black"><b>###POST_TITLE###</b></font><!-- ###LINK### end --><br><font face="verdana,arial,helvetica" size="1">###POST_CONTENT###</font></td>
 				<td bgcolor="#E7E3DB" align="center" valign="top" nowrap><font face="verdana,arial, helvetica" size="1">###POST_REPLIES###</font></td>
 				<td bgcolor="#E7E3DB" align="center" valign="top" nowrap><font face="verdana,arial, helvetica" size="1">&nbsp;</font></td>
 				<td bgcolor="#E7E3DB" valign="top" align="center"><font face="verdana,arial, helvetica" size="1">###POST_AGE### ###BOARD_AGO### </font><br><font face="arial, helvetica" size="1">###BOARD_BY### ###POST_AUTHOR###</font></td>
@@ -102,10 +102,10 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 	<!-- ###CONTENT### begin -->
 	<!--###POST### begin -->
 		<tr>
-			<td bgcolor="#E7E3DB" valign="top"><font face="verdana,arial" size="1"><!--###LINK###--><b>###POST_TITLE###</b><!--###LINK###--><br>###POST_CONTENT###</font></td>
+			<td bgcolor="#E7E3DB" valign="top"><font face="verdana,arial" size="1"><!-- ###LINK### begin --><b>###POST_TITLE###</b><!-- ###LINK### end --><br>###POST_CONTENT###</font></td>
 			<td bgcolor="#E7E3DB" align="center" valign="top"><font face="verdana,arial" size="1">###POST_AUTHOR###</font></td>
 			<td bgcolor="#E7E3DB" align="center" valign="top"><font face="verdana,arial" size="1">###POST_REPLIES###</font></td>
-			<td bgcolor="#E7E3DB" align="center" valign="top"><font face="verdana,arial" size="1"><!--###LINK_LAST_POST###-->###LAST_POST_AGE###<!--###LINK_LAST_POST###--></font></td>
+			<td bgcolor="#E7E3DB" align="center" valign="top"><font face="verdana,arial" size="1"><!-- ###LINK_LAST_POST### begin -->###LAST_POST_AGE###<!-- ###LINK_LAST_POST### end --></font></td>
 		</tr>
 	<!--###POST### end -->
 	<!-- ###CONTENT###  end -->
@@ -129,7 +129,7 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 -->
 <table width="98%" border="0" cellspacing="1" cellpadding="4">
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>&lth; ###BOARD_BACK_TO_FORUM###</b></font><!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!-- ###LINK_BACK_TO_FORUM### begin --><font face="verdana,arial" size="1" color="black"><b>&lth; ###BOARD_BACK_TO_FORUM###</b></font><!-- ###LINK_BACK_TO_FORUM### end --></td>
 	</tr>
 	<tr bgcolor="#7C848C">
 		<td align="center" nowrap><font face="verdana,arial" size="1" color="white"><b>###BOARD_AUTHOR###:</b></font></td>
@@ -158,13 +158,10 @@ For the full list of markers/subparts, see board_template1.tmpl<br>
 		<!--###POST_1### end -->
 	<!-- ###CONTENT###  end -->
 	<tr>
-		<td colspan=2><!--###LINK_BACK_TO_FORUM###--><font face="verdana,arial" size="1" color="black"><b>&lt; ###BOARD_BACK_TO_FORUM###</b></font><!--###LINK_BACK_TO_FORUM###--></td>
+		<td colspan=2><!-- begin ###LINK_BACK_TO_FORUM### --><font face="verdana,arial" size="1" color="black"><b>&lt; ###BOARD_BACK_TO_FORUM###</b></font><!-- ###LINK_BACK_TO_FORUM### end --></td>
 	</tr>
 </table>
 <!-- ###TEMPLATE_THREAD### end -->
-
-
-
 
 
 
